erDiagram
    UTENTI {
        int id PK
        string username UK
        string email UK
        string password_hash
        string ruolo
        string avatar_path
        string banner_path
        int segno_zodiacale_id FK
        int ascendente_id FK
        int qi
        datetime ultimo_accesso
        int giorni_consecutivi
        int giorni_ricompensa_giornaliera
        date ultima_ricompensa_giornaliera
        datetime premium_attivato_at
        datetime prossimo_bonus_premium_at
        datetime created_at
        datetime updated_at
    }

    SEGNI_ZODIACALI {
        int id PK
        string nome UK
        string modalita
        string descrizione
        int elemento_id FK
        int pianeta_id FK
        int metallo_id FK
        datetime created_at
        datetime updated_at
    }

    ELEMENTI {
        int id PK
        string nome UK
        string descrizione
        datetime created_at
        datetime updated_at
    }

    PIANETI {
        int id PK
        string nome UK
        string descrizione
        datetime created_at
        datetime updated_at
    }

    METALLI {
        int id PK
        string nome UK
        string descrizione
        datetime created_at
        datetime updated_at
    }

    TEMI_NATALI {
        int id PK
        int utente_id FK
        date data_nascita
        time ora_nascita
        string luogo_nascita
        decimal latitudine
        decimal longitudine
        string timezone
        int geoname_id
        string analisi_gemini
        string interpretazione_astroway
        string risposta_astroway
        datetime data_creazione
        datetime created_at
        datetime updated_at
    }

    SOGNI {
        int id PK
        int utente_id FK
        string testo
        datetime created_at
        datetime updated_at
    }

    INTERPRETAZIONI {
        int id PK
        int sogno_id FK
        string prompt
        string testo
        string stile
        string umore
        datetime scadenza_cache
        datetime created_at
        datetime updated_at
    }

    POST {
        int id PK
        int utente_id FK
        int interpretazione_id FK
        string testo_visibile
        datetime data_pubblicazione
        int numero_like
        datetime created_at
        datetime updated_at
    }

    COMMENTI {
        int id PK
        int post_id FK
        int utente_id FK
        string testo
        datetime created_at
        datetime updated_at
    }

    LIKE_POST {
        int id PK
        int post_id FK
        int utente_id FK
        datetime created_at
        datetime updated_at
    }

    COSMETICI {
        int id PK
        string nome
        string descrizione
        int prezzo_qi
        datetime created_at
        datetime updated_at
    }

    INVENTARI_COSMETICI {
        int id PK
        int utente_id FK
        int cosmetico_id FK
        boolean equipaggiato
        datetime data_acquisto
        datetime created_at
        datetime updated_at
    }

    BADGE {
        int id PK
        string codice UK
        string nome
        string descrizione
        string icona
        string tipo_condizione
        int soglia
        int ricompensa_qi
        boolean attivo
        datetime created_at
        datetime updated_at
    }

    UTENTI_BADGE {
        int id PK
        int utente_id FK
        int badge_id FK
        datetime created_at
        datetime updated_at
    }

    UTENTI_FOLLOW {
        int id PK
        int follower_id FK
        int seguito_id FK
        datetime created_at
        datetime updated_at
    }

    ELEMENTI ||--o{ SEGNI_ZODIACALI : contiene
    PIANETI ||--o{ SEGNI_ZODIACALI : caratterizza
    METALLI ||--o{ SEGNI_ZODIACALI : associato

    SEGNI_ZODIACALI o|--o{ UTENTI : segno
    SEGNI_ZODIACALI o|--o{ UTENTI : ascendente

    UTENTI ||--o| TEMI_NATALI : possiede
    UTENTI o|--o{ SOGNI : racconta
    SOGNI o|--o{ INTERPRETAZIONI : contiene

    UTENTI o|--o{ POST : pubblica
    INTERPRETAZIONI o|--o{ POST : condivisa

    UTENTI ||--o{ COMMENTI : scrive
    POST ||--o{ COMMENTI : riceve

    UTENTI ||--o{ LIKE_POST : mette
    POST ||--o{ LIKE_POST : riceve

    UTENTI ||--o{ INVENTARI_COSMETICI : possiede
    COSMETICI ||--o{ INVENTARI_COSMETICI : incluso

    UTENTI ||--o{ UTENTI_BADGE : ottiene
    BADGE ||--o{ UTENTI_BADGE : assegnato

    UTENTI ||--o{ UTENTI_FOLLOW : segue
    UTENTI ||--o{ UTENTI_FOLLOW : seguito_da
